--- a/index.html
+++ b/index.html
@@ -3,49 +3,32 @@
     <head>
         <!-- Used by Keybord-->
         <meta charset="utf-8">
-        <title>Index Webpage</title>
-        <!--Used by Browser or google search-->
-        <meta name="author" content="Viktoriia Lysenko">
-        <meta name="description" content="Learning HTML by building a simple website">
-        <meta name="keywords" content="boilerplate, starter code, HTML, learning">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Content give value for name or http-equiv attribute, text entry in string or array string -->
-
-        <!-- meta http-equiv="default-style" content=""--> <!-- content matches css link exactly-->
-
-        <!-- Other meta attributes to be aware of -->
-
-        <!-- meta http-equiv="refresh" content="30"-->
-        <!-- Content forces a Internet Request to refresh webpage every "time value in seconds" -->
-        <!-- Use this when refreshes are needed -->
-
-        <!-- meta http-equiv="content-type" content="text/html; charset=UTF-8" -->
-        <!-- Already specified in the charset above-->
-
-        <!-- Cyber Security Note about JavaScript in Browsers-->
-        <link rel="stylesheet" href="Style.css">
+        <title>Index Webpage</title>>
         <noscript>Running JavaScript is not necessary in this page... FVI: your feature of execute scripts is turned off </noscript>
         <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4/4259.png" alt="Images\4259.png">
+        <style>
+            .main{
+                font-size: 1,4vw;
+                padding: 60px;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+        </style>
     </head>
     <body>
         <header><h1 style="font-size: 3vw;">Learning HTML</h1></header>
         <nav >
             <Header><h1 style="font-size:2.5vw;">Navigation</h1></Header>
-            <Section style="color: #0a0b13;text-decoration:none;">Page Hyperlinks
-                <ul>
-                     <li> Meta Data Example: <a href="childpages/Meta data example.html" target="blank">Click here when avaible</a>
-                     <li> Footer Blockquote Examle: <a href="childpages/Footer Blockquote.html" target="blank">Click here when avaible</a>
-                     <li> Template Exampler: <a href="childpages/childtemplate.html" target="blank">Click here when avaible</a>
-                     <li> Headings and Paragraph Tags:<a href="childpages/Headings and Paragraph Tags.html" target="blank">Click here when avaible</a>
-                     <li> Subscript and Superscript Tags:<a href="childpages/Subscript and Superscript Tags.html" target="blank">Click here when avaible</a>
-                     <li> Image lesson:<a href="childpages/Image lesson.html" target="blank">Click here when avaible</a>
-                     <li> Laying out DIV's(using HTML boilerplate):<a href="childpages/Laying out DIV's.html" target="blank">Click here when avaible</a>
-                     <li> What this index page might look like with Flexbox:<a href="childpages/Flexbox.html" target="blank">Click here when avaible</a>
-                </ul>
-            </Section>
-        </nav>
-        <Aside></Aside>
-        <main></main>
+        <Aside style=""></Aside>
+        <main class="main">What do these texts suggest about the impact of the choices we make in our lives?
+            I suppose everybody was in a situation when it was hard to choose between two or more things. For example, what to eat for breakfast: eggs or cereal? Should I stay at home or go to the gym? Should I move to another city, or maybe another country, and so on? People usually don't notice it, but they make small choices every day. And these choices are the ones that build our lives from scratch. Small decisions may seem insignificant, but in the long run, they have a big impact on a person’s life.
+            In my opinion, in the case of not small decisions, a person always has a choice between the easy path and the hard path. However, it may be hard to figure out which is which. People tend to follow a simple path, which is completely natural. However, it’s always the difficult way that makes a person grow and leads to the right place. In fact, it is a simple truth that the greater the effort, the greater the impact. And in accordance with this impact, come greater changes in life. 
+            The play “Inherit the wind” by Jerome Lawrence and Robert E. Lee serves as an excellent example of my thesis. The main character Bertram Cates had been arrested for breaking the law by teaching evolution in public school. It seems strange to us, but denying religion was a crime in those days. Besides, Bert lived in a very religious town, so-called, “The buckle on the Bible’s Belt- Heavenly Hillsboro”. People reacted very negatively to Bert's crime. “People look at me as if I was a murderer”(pg. 23)- he claimed. Obviously, under this pressure, Cates started to doubt himself. Even his fiancée Rachel begged him to surrender and admit his guilt. Bert, driven into a dead end, was faced with a choice to quit the trial or to face and challenge the law with all people behind it. It is a choice between simple and difficult paths, and Cates chose the last one. He was scared but still stuck to what he believed in. As said a defense attorney Mr. Drummond: “It’s the loneliest feeling in the world-to find yourself standing up when everybody else is sitting down.”(pg.46). This choice made a huge impact on Bert’s life. All of the newspaper’s headlines shouted about “The teacher who dares the law”, people condemned and cursed him, and he got fired from the school. But he still opposes, how it seems to a lonely human, the whole world. In the end, the jury finds him guilty, and he is fined 100 dollars. However, in the course of the trial, the opinions of thousands of people were changed. Cates and Drummond proved that everyone has the right to think and speak freely. Bert’s courage stirred the fear of a frightened society. He showed them an example that the law can be wrong and you have to stand up for your belief: "I have been convicted of violating an unjust law. I will continue in the future, as I have in the past, to oppose this law in any way I can.”(pg.102). This made a huge impact not only on Bert but on thousands of people too. Cates’ choice to fight has defended people’s freedom to think.
+            Robert Frost also speaks about the impact of difficult choices in his poem “The Road Not Taken”. The author uses a common allegory in this text: life is a road, a crossroad- the moment of making a difficult decision. Robert Frost describes the feelings of a person forced to choose. The main character feels sorrow because he or she can’t go both ways. The speaker hopes to save one of the roads for another day, but deep inside knows that he or she will never come back to this moment. By choosing one of the ways, you have to sacrifice the other one. The main character chose the road, which was “less traveled by”, though he or she mentions that they were actually “equally worn”. This means that the speaker doesn’t know which decision was better, but he chose the one, which seemed right to him at that moment. In the end, the speaker hopes that he or she will be looking back on this crossroad with the thought, that this choice “made all the difference”. Robert Frost emphasizes that sometimes we have to make choices blindly because it is even hard to say which path is more difficult.
+             I myself had a situation where I encountered one of these “crossroads”. In the 7th grade, my parents suggested that I transfer to the school which had the best rating in the region. However, this meant that I would leave my friends at my old school, which was the worst nightmare for a 12-year-old kid. It also meant that studying would become much more difficult and would take a lot of time. I also had to pass a test to get in, and some children prepared for it for the whole year. The teachers from the old school all told us not to transfer. But I knew that the harder the path, the more likely it would lead to success. I passed the exam, got into school, and my old friends turned out to be not very faithful. At that time, this decision was extremely difficult for me. But looking back, I understand that this school gave me an incredible push for development. I have never regretted transferring.
+            All things considered, I can say that it’s always the difficult choice that makes a person grow. Our choices can have an impact not only on us but also on society or our loved ones. Sometimes it’s hard to give up one part of life to gain another, but it is vital to make changes in life.
+             
+            
+            </main>
         <section></section>
         <article></article>
     </body>
